made some changes

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                     <label class="text-white fs-5 m-2">Priority :</label>
                     <select id="search-input" class="form-control" aria-label="Priority Selection">
                         <option value="-1">Select Priority</option>
-                        <option value="1">🟢 Low</option>
-                        <option value="2">🟡 Medium</option>
-                        <option value="3">🔴 High</option>
+                        <option value="1"> Low</option>
+                        <option value="2"> Medium</option>
+                        <option value="3"> High</option>
                     </select>
                 </div>
                 <div class="col-md-2 text-center">
