add readme file

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         $(document).ready(function () {
 
             function getPriorityText(priority) {
-                if (priority == 1) return "🟢 Low";
-                if (priority == 2) return "🟡 Medium";
-                if (priority == 3) return "🔴 High";
+                if (priority == 1) return "Low";
+                if (priority == 2) return "Medium";
+                if (priority == 3) return "High";
                 return "";
             }
 
